Added generator for resource generators